Nav bar scroll working

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
       </header>
       <div class="divider-large"></div>
       
-      <details open>
+      <details close>
         <summary><a class="nav-link" href="#section1">1. Introduction </a></summary>
         <a class="nav-link-sub" href="#section1-1">Advantages of C++</a><br>
         <a class="nav-link-sub" href="#section1-2">Applications of C++</a>
       </details>
       <div class="divider-small"></div>
 
-      <details open>
+      <details close>
         <summary><a class="nav-link" href="#section2">2. C++ Basic Syntax </a></summary>
         <a class="nav-link-sub" href="#section2-1">Identifiers</a><br>
         <a class="nav-link-sub" href="#section2-2">Comments</a>
       </details>
       <div class="divider-small"></div>
 
-      <details open>
+      <details close>
         <summary><a class="nav-link" href="#section3">3. C++ Variables </a></summary>
         <a class="nav-link-sub" href="#section3-1">Declaring Variables</a><br>
         <a class="nav-link-sub" href="#section3-2">Displaying Variables</a><br>
@@ -41,7 +41,7 @@
       <div class="divider-small"></div>
 
       
-      <details open>
+      <details close>
         <summary><a class="nav-link" href="#section5">5. C++ Conditions and If Statements </a></summary>
         <a class="nav-link-sub" href="#section5-1">if Statement</a><br>
         <a class="nav-link-sub" href="#section2-2">else Statement</a><br>
@@ -50,7 +50,7 @@
       </details>
       <div class="divider-small"></div>
 
-      <details open>
+      <details close>
         <summary><a class="nav-link" href="#section6">6. C++ Loops </a></summary>
         <a class="nav-link-sub" href="#section6-1">while Loop</a><br>
         <a class="nav-link-sub" href="#section2-2">do/while Loop</a><br>
@@ -58,7 +58,7 @@
       </details>
       <div class="divider-small"></div>
 
-      <details open>
+      <details close>
         <summary><a class="nav-link" href="#section7">7. C++ Break and Continue </a></summary>
         <a class="nav-link-sub" href="#section6-1">Break</a><br>
         <a class="nav-link-sub" href="#section2-2">Continue</a><br>
@@ -66,7 +66,7 @@
       </details>
       <div class="divider-small"></div>
 
-      <a class="nav-link" href="#reference">8. Reference</a>
+      <a class="nav-link" href="#reference">8. Reference</a>      
     </nav>
 
     <main id="main-doc">
