mobile query changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <nav id="navbar">
-      <header class="master-header-box">06/23</header>
+      <header class="master-header-box">C++</header>
       <div class="divider-small"></div>
       
       <details close>
@@ -84,7 +84,7 @@
     <h1 class="main-title">C++ Documentation Summary</h1>
       <section class="main-section" id="1._Introduction">
         <header>1. Introduction</header>
-        
+
         <p>C++ is a middle-level programming language developed by <i>Bjarne Stroustrup</i> starting in 1979 at Bell Labs. C++ runs on a variety of platforms, such as Windows, Mac OS, and the various versions of UNIX. This C++ tutorial adopts a simple and practical approach to describe the concepts of C++ for beginners to advanded software engineers.</p>
 
         <h3 id="section1-1">I. Advantages of learning C++</h3>
