--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       <div class="divider-small"></div>      
     </nav>
 
+    <div class="main-box">
     <main id="main-doc">
     <h1 class="main-title">C++ Documentation Summary</h1>
       <section class="main-section" id="1._Introduction">
@@ -480,5 +481,6 @@
       <hr>
 
     </main>
+    </div>
   </body>
 </html>
