Mobile view optimization

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="gtk">
         <pre>
           <code class="gtk-code">
-            cout is pronounced "see-out". Used for output, and uses the insertion operator (<<)<br>
+            cout is pronounced "see-out". Used for output, and uses the insertion operator (<<)
             cin is pronounced "see-in". Used for input, and uses the extraction operator (>>)
           </code>
         </pre>
